Add footer section

--- a/index.html
+++ b/index.html
@@ -557,6 +557,17 @@
             </div>
           </form>
         </div>
+        <!-- Footer -->
+        <footer class="page-footer font-small blue">
+
+          <!-- Copyright -->
+          <div class="footer-copyright text-center py-3">© 2019 Copyright:
+            <a href="https://github.com/Marcusjnls"> Marcus Jean-Louis</a>
+          </div>
+          <!-- Copyright -->
+
+        </footer>
+        <!-- Footer -->
       </div>
     </div>
   </div>
