--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               I am curious and like implementing new ideas on projects I'm working on.
               When not immersed in code and some chillhop music, I'll be working on 3D prints or something mechanical.
               Want to work together? I'd love to hear from you.</p>
-            <a href="images/about/Marcus_CV.pdf" download>Download CV &nbsp;<i class="fas fa-download"></i></a>
+            <a href="images/about/Marcus Jean-Louis CV.pdf" download>Download CV &nbsp;<i class="fas fa-download"></i></a>
           </div>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
